# lencode

./: AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  comparison.sh  comparison_u64.sh  comparison_varint.sh  publish.sh  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: big-endian.yml  ci.yaml
benches/: bytes_bench.rs  codec_bench.rs  diff_bench.rs  encode_decode.rs  roundup.rs  solana_bench.rs  varint_bench.rs
examples/: sanitized_tx_compression.rs  size_comparison.rs  versioned_tx_compression.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: bit_varint.rs  bytes.rs  context.rs  dedupe.rs  diff.rs  io.rs  lib.rs  pack.rs  serde.rs  solana.rs  tuples.rs  u256.rs  varint.rs
src/io/: bit_reader.rs  bit_writer.rs  buffered_reader.rs  cursor.rs
src/varint/: leb128.rs  lencode.rs
tests/: derive_tests.rs
