[package]
name = "lencode"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A crate for encoding and decoding variable-length data using the Lencode varint encoding scheme and deduplication"
keywords = ["encoding", "decoding", "bincode", "varint", "serde"]
authors = ["sam0x17"]
repository = "https://github.com/sam0x17/lencode"
documentation = "https://docs.rs/lencode/latest/lencode/"

[dependencies]
bitvec = "1"
endian-cast = "2"
typenum = "1"
generic-array = "1"
solana-sdk = { version = "2", optional = true }
ruint = { version = "1" }
newt-hype = { version = "0.2", default-features = false }
hashbrown = "0.15.5"
critical-section = "1"
ahash = { version = "0.8", default-features = false }

[dev-dependencies]
rayon = "1"
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
borsh = "1.5"
bincode = { version = "2", features = ["serde"] }

[features]
default = []
std = []
solana = ["std", "dep:solana-sdk"]

[profile.test]
opt-level = 3
lto = true

[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true

[lints.clippy]
missing_const_for_fn = "warn"

[workspace.lints.clippy]
missing_const_for_fn = "warn"

[[bench]]
name = "varint_bench"
harness = false

[[bench]]
name = "roundup"
required-features = ["std"]
harness = false

[[bench]]
name = "solana_bench"
required-features = ["solana"]
harness = false
