[package]
name = "lencode-macros"
version.workspace = true
edition = "2024"
license = "MIT"
authors = ["sam0x17"]
description = "support macros for lencode"
repository = "https://github.com/sam0x17/lencode"
documentation = "https://docs.rs/lencode/latest"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"

[lints]
workspace = true
